Update to API and readme to add functionality
